Calculo de Atrasos; add metodos na entidade Frequencia

--- a/aplicacoes/gestao-estagio/src/main/resources/templates/supervisao/gerenciar-frequencias.html
+++ b/aplicacoes/gestao-estagio/src/main/resources/templates/supervisao/gerenciar-frequencias.html
@@ -119,16 +119,8 @@
 	
 			      <div class="col-sm-4">
 			          <ul class="list-group">
-			            <li class="list-group-item gp-list-group-item list-group-item-danger">
-			              <b>Faltas</b> <span class="badge" th:inline="text">[[${consolidadoFrequencia.porcentagemFaltas}]]%</span>
-			            </li>
-			          </ul>
-			      </div>
-	
-			      <div class="col-sm-4">
-			          <ul class="list-group">
 			            <li class="list-group-item gp-list-group-item list-group-item-warning">
-			              <b>Atrasos</b> <span class="badge" th:inline="text">[[${faltasEAtrasos}]]</span>
+			              <b>Faltas e Atrasos</b> <span class="badge" th:inline="text">[[${faltasEAtrasos}]]</span>
 			            </li>
 			          </ul>
 			      </div>
@@ -140,14 +132,7 @@
 			            </li>
 			          </ul>
 			      </div>
-	
-			      <div class="col-sm-4">
-			          <ul class="list-group">
-			            <li class="list-group-item gp-list-group-item list-group-item-default">
-			              <b>Pendências</b> <span class="badge" th:inline="text">[[${consolidadoFrequencia.totalPendencias}]]</span>
-			            </li>
-			          </ul>
-			      </div>
+
 			      <div class="col-sm-4">
 			          <ul class="list-group"></ul>
 			      </div>
