--- a/aplicacoes/gestao-estagio/src/main/resources/templates/supervisao/acompanhamento-estagiario.html
+++ b/aplicacoes/gestao-estagio/src/main/resources/templates/supervisao/acompanhamento-estagiario.html
@@ -132,35 +132,48 @@
 	          	<div class="panel-heading" >
 	            	<a class="panel-title" data-toggle="collapse" data-target="#consolidado"><i class="fa fa-caret-down" aria-hidden="true"></i> Consolidado Frequências</a>
 			  	</div>
-	          	<div id="consolidado" class="panel-body collapse in">
-	          	
-			      <div class="col-sm-4">
+	          <div id="consolidado" class="panel-body collapse in">
+			      <div class="col-sm-6">
 			          <ul class="list-group">
 			            <li class="list-group-item gp-list-group-item list-group-item-success">
-			              <b>Presenças</b> <span class="badge" th:inline="text">[[${consolidadoFrequencia.porcentagemPresencas}]]%</span>
+			              <b>Frequência</b> <span class="badge" th:inline="text">[[${#numbers.formatDecimal(consolidadoFrequencia.porcentagemFrequencia, 0, 'COMMA', 2, 'POINT')}]] %</span>
 			            </li>
 			          </ul>
 			      </div>
 	
-			      <div class="col-sm-4">
+			      <div class="col-sm-6">
 			          <ul class="list-group">
-			            <li class="list-group-item gp-list-group-item list-group-item-warning">
-			              <b>Faltas e Atrasos</b> <span class="badge" th:inline="text">[[${faltasEAtrasos}]]</span>
+			            <li class="list-group-item gp-list-group-item list-group-item-danger">
+			              <b>Faltas</b> <span class="badge" th:inline="text">
+			              [[${#numbers.formatDecimal(consolidadoFrequencia.porcentagemFaltas, 0, 'COMMA', 2, 'POINT')}]] %</span>
 			            </li>
 			          </ul>
 			      </div>
 	
-			      <div class="col-sm-4">
+			      <div class="col-sm-6">
+			          <ul class="list-group">
+			            <li class="list-group-item gp-list-group-item list-group-item-default">
+			              <b>Reposições</b> <span class="badge" th:inline="text">[[${consolidadoFrequencia.horasReposicao}]]</span>
+			            </li>
+			          </ul>
+			      </div>
+	
+			      <div class="col-sm-6">
 			          <ul class="list-group">
 			            <li class="list-group-item gp-list-group-item list-group-item-info">
-			              <b>Reposições</b> <span class="badge" th:inline="text">[[${consolidadoFrequencia.totalReposicoes}]]</span>
+			              <b>Abonos</b> <span class="badge" th:inline="text">[[${consolidadoFrequencia.horasAbonadas}]]</span>
 			            </li>
 			          </ul>
 			      </div>
-
-			      <div class="col-sm-4">
-			          <ul class="list-group"></ul>
+	
+			      <div class="col-sm-6">
+			          <ul class="list-group">
+			            <li class="list-group-item gp-list-group-item list-group-item-warning">
+			              <b>Banco de Horas</b> <span class="badge" th:inline="text">[[${consolidadoFrequencia.bancoHoras}]]</span>
+			            </li>
+			          </ul>
 			      </div>
+	
 				  <br/><br/>
 	        	  <a th:href="@{/Supervisao/Acompanhamento/{id}/Frequencias(id=${estagio.id})}" class="btn btn-success btn-sm pull-right">gerenciar</a>
 	          	</div>
